# ECHO-Cli

./: .gitignore  Cargo.toml  README.md
src/: app.rs  audio_backend.rs  audio_backend_wasapi.rs  commands.rs  config.rs  db.rs  decoder.rs  device.rs  error.rs  library.rs  main.rs  metadata.rs  playback.rs  scanner.rs  search.rs  shell.rs  tui.rs
