[package]
name = "echo-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
cpal = "0.16.0"
crossterm = "0.28.1"
directories = "6.0.0"
jwalk = "0.8.1"
lofty = "0.22.4"
ratatui = "0.29.0"
rayon = "1.10.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
symphonia = { version = "0.5.5", default-features = false, features = ["aac", "alac", "flac", "isomp4", "mp3", "pcm", "wav"] }
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
walkdir = "2.5.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
